client/main.css
/* CSS declarations go here */

.orange {
  color: #f58025;
}

.light-orange {
  color: #ed985f; 
}

.white {
  color: #ffffff;
}

.black {
  color: #000000; 
}

.back-orange {
  background: #f58025;
}

.back-light-orange {
  background: #ed985f; 
}

.back-white {
  background: #ffffff; 
}

.bold {
  font-weight: bold; 
}

.nopad {
  padding: 0; 
}

.row.match-my-cols {
    overflow: hidden; 
}

.row.match-my-cols [class*="col-"]{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}

.link {
  padding: 0; 
}

.tiny {
  font-size: .5em;
}

.posts {
  padding: 20px 20px 20px 20px

}

.no-margin {
  margin: 0 !important; 
}

.stretch {
  height: 100%; 
}

body {
  font-family: "Avenir",sans-serif;
  background: #ed985f;
  /*background: url(/img/nassau.jpg) no-repeat center center fixed;*/
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  padding: 0;
  margin: 0;
  height: 100%; 

  font-size: 14px;
}

.sidebar {
  padding: 20px 20px 20px 20px; 
  margin: 0 auto; 
}

.question {
  float: left;
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  width: 30%;
}

.answer {
  float: left;
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
  width: 45%;
}

header {
  max-width: 600px; 
  padding: 50px 0px 15px 0px;
  margin: 0 auto;
  text-align: center; 
}

#login-buttons {
  font-size: 1.25em;
  margin: 0 auto;
  margin-bottom: 10px;
  display: inline-block;
  margin-right: 1em;
  color: #ffffff;
  font-family: "Avenir Next";
}

h1 {
  font-size: 2.5em;
  margin: 0 auto;
  margin-bottom: 10px;
  display: inline-block;
  margin-right: 1em;
  font-family: "Avenir Next";
  font-weight: bold; 
}

h2 {
  font-size: 1.66666667em;
  margin: 0 auto;
  margin-bottom: 10px;
  display: inline-block;
  margin-right: 1em;
  font-family: "Avenir Next";
  font-weight: normal; 
}

h3 {
  font-size: 1.25em;
  margin: 0 auto;
  margin-bottom: 10px;
  display: inline-block;
  margin-right: 1em;
  font-family: "Avenir Next";
  font-weight: normal; 
}

p {
  font-size: 1.25em;
  margin: 0;
  font-family: "Avenir Next";
  font-weight: normal; 
}

form {
  margin-top: 10px;
  margin-bottom: -10px;
  position: relative;
}

.new-question input {
  box-sizing: border-box;
  padding: 10px 0;
  background: transparent;
  border: none;
  width: 100%;
  padding-right: 80px;
  font-size: 1em;
}

.new-question input:focus{
  outline: 0;
}

textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    background-color: #f8f8f8;
    font-size: 16px;
    resize: none;
}

.search input {
  box-sizing: border-box;
  padding: 10px 0;
  background: transparent;
  border: none;
  padding-right: 80px;
  font-size: 1em;
}

.button {
  background:none!important;
  border:none; 
  padding:0!important;
  font-size: 1.25em;
  margin: 0;
  font-family: "Avenir Next";
  font-weight: normal; 
  /*border is optional*/
  cursor: pointer;
}

input[type=button], input[type=submit], input[type=reset] {
    background-color: #f58025;
    border: none;
    color: white;
    padding: 10px 10px;
    text-decoration: none;
    margin: 10px 2px;
    cursor: pointer;
}

ul {
  margin: 0;
  padding: 0;
}

.delete {
  float: right;
  font-weight: bold;
  background: none;
  font-size: 1em;
  border: none;
  position: relative;
}

.answerButton {
  float: right;
}
li {
  position: relative;
  list-style: none;
  padding: 5px;
  border-bottom: #eee solid 1px;
}

li .text {
  margin-left: 10px;
}

li.checked {
  color: #888;
}

li.checked .text {
  text-decoration: line-through;
}

li.private {
  background: #eee;
  border-color: #ddd;
}

header .hide-completed {
  float: right;
}

.toggle-private {
  margin-left: 5px;
}

@media (max-width: 600px) {
  li {
    padding: 12px 15px;
  }

  .search {
    width: 150px;
    clear: both;
  }

  .new-post input {
    padding-bottom: 5px;
  }
}

.question {
  font-weight: bold;
}

.answer {
  font-style: italic;
  color: #aaa;
}

